Corrected fault in validation for overlapping claims. Worked on admin of admOffs (not completed).

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -562,6 +562,11 @@ li a {
     width: 150px;
 }
 
+.btn-primary4 {
+    margin-left: 5px;
+    width: 180px;
+}
+
 .btn-primary-small {
     margin-left: 0;
     font-size: 14px;
